# 111_LIVEWORLD

./: .gitignore  CMakeLists.txt  run.bat
src/: main.cpp
src/metric/: loc.cpp  macro.hpp  metric.hpp
src/tests/: run_tests.cpp  test_metric copy.hpp  test_metric.hpp
